<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/purple_500">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/information"
            android:textColor="#fff">

        </TextView>


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/house_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="5dp"
        android:text="@string/house_number"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/road"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/house_number"
        android:layout_margin="5dp"
        android:text="@string/road"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/hamlet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/road"
        android:layout_margin="5dp"
        android:text="@string/hamlet"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/town"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hamlet"
        android:layout_margin="5dp"
        android:text="@string/town"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/village"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/town"
        android:layout_margin="5dp"
        android:text="@string/village"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/village"
        android:layout_margin="5dp"
        android:text="@string/city"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/county"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city"
        android:layout_margin="5dp"
        android:text="@string/county"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/state_district"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/county"
        android:layout_margin="5dp"
        android:text="@string/state_district"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/state_district"
        android:layout_margin="5dp"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/postcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/state"
        android:layout_margin="5dp"
        android:text="@string/postcode"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/postcode"
        android:layout_margin="5dp"
        android:text="@string/country"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/country_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/country"
        android:layout_margin="5dp"
        android:text="@string/country_code"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_below="@+id/country_code"
        android:layout_margin="5dp"/>

</RelativeLayout>