<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/purple_500">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/search_location"
            android:textColor="#fff">

        </TextView>


    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/toolbar"
        android:hint="@string/enter_the_desired_location"
        android:inputType="text"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="Autofill">

    </EditText>

    <ImageView
        android:id="@+id/bottom_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp"
        android:src="@android:drawable/ic_search_category_default"
        android:contentDescription="@string/app_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_height="match_parent"
        android:layout_below="@+id/search" />

</RelativeLayout>